2024-08-25  Karl Berry  <karl@freefriends.org>

        * crossref/ltx2crossrefxml-tugboat.cfg: use "our", etc. to avoid
        warnings.
        (LaTeX_ToUnicode_convert_hook): more substitutions for 45:2.
        (tugboat_url_prefix): systematically handle url cases.
        * crossref/README-landing.txt,
        * crossref/README-process.txt: doc updates.


2024-08-22  Karl Berry  <karl@freefriends.org>

        * tb140capsule.txt: new file.
	* Makefile (testiss,lastiss,crossref_iss): tb140.
	* lists-translations.txt (\TFM, \Xe,): new defns.
	* lists-unifications.txt (TUG 2024, Fowler, etc.): new defns.

2024-08-20  Karl Berry  <karl@freefriends.org>

	* lists-authinfo.txt: orcid for 45:2.
	
	* capcrossref.pl: debug fix.

2024-05-15  Karl Berry  <karl@tug.org>

	* tb136capsule.txt (beet): Donald Story, not Dave W and Chuck.

2024-05-07  Karl Berry  <karl@freefriends.org>

	* capcrossref.pl (crossref_create_landing_page): do not add period
	if shortdesc ends with ? or !.
	Use &ndash; for page range.
	* crossref/README-process.txt: register earlier.
	* crossref/ltx2crossrefxml-tugboat.cfg (\meta, \YAML): new.
	(\Dash, \dash): ignore preceding whitespace.
	* tb139capsule.txt (starynovotny): need \CONNECT{}.

2024-04-28  Karl Berry  <karl@freefriends.org>

        * tb139capsule.txt: new file.
	* Makefile (testiss,lastiss,crossref_iss): tb139.
	* capaccum.pl (accumulation): also ignore four-digit hex entities.
	* lists-regexps.txt (\meta): new definition, expanding
        "&#x27e8;<i>$1</i>&#x27e9;", the mathematical angle brackets.
        (Hope font coverage is good enough.)
        (\code): also accept \tbcode.
        (\booktitle): use non-capture group (?:...) for consistency.
        * lists-translations.txt (\tubplus): +.
        * lists-unifications.txt (Garc&#xed;a&#xa0;De&#xa0;Castro):
        give Federico all his accents.

	* capout.pl (write_entries): <nobr> the page range, as breaking at
	the hyphen is irritating.
		