@@ -10,12 +10,10 @@ ltx2crossrefxml = ./ltx2crossrefxml
 #
 tub_cfg = ltx2crossrefxml-tugboat.cfg
 
-# We will read all the rpi files generated by captub,
-# which we run one issue at a time.
+# We will read all the rpi files generated by captub, which we run one
+# issue at a time. ltx2crossrefxml automatically reads the companion
+# .bbl and .crbib files.
 rpi_input = dir2.process/*.rpi
-#
-# The bbl files for those articles.
-bbl_input = dir2.process/*.bbl
 #
 # The output file we will eventually upload.
 xml_output = dir2.process/issue.xml
@@ -23,9 +21,12 @@ xml_output = dir2.process/issue.xml
 # When uploading corrections:
 #xml_output = dir3.uploaded/tb132/issue-corr2.xml 
 
+# All the arguments we pass.
+ltx2crossrefxml_args = -c $(tub_cfg) $(rpi_input) --rpi-is-xml -o $(xml_output)
+
 # the "issue" target is used by cr-do-issue.
 $(xml_output) issue: $(rpi_input) $(tub_cfg) force
-	$(ltx2crossrefxml) -c $(tub_cfg) $(rpi_input) --rpi-is-xml -o $(xml_output) \
+	$(ltx2crossrefxml) $(ltx2crossrefxml_args) \
 	  || { rm -f $(xml_output); exit 1; }
 	xmllint --noout $(xml_output) # basic syntax check
 #sed '1,/<titles>/d' $(xml_output) # omit top boilerplate
@@ -35,13 +36,14 @@ $(xml_output) issue: $(rpi_input) $(tub_cfg) force
 #grep -A1 '<citation' $(xml_output) | grep -v '^--$$' | cut -c 6-
 	! egrep '\\|--' $(xml_output) # TeX left untranslated?
 
-# https://www.crossref.org/schemas/crossref4.4.2.xsd
-# https://www.crossref.org/schemas/common4.4.2.xsd
-xsd = http://www.crossref.org/schema/deposit/crossref4.4.2.xsd
+# https://www.crossref.org/schemas/crossref5.3.1.xsd
+# https://www.crossref.org/schemas/common5.3.1.xsd
+xsd = http://www.crossref.org/schema/deposit/crossref5.3.1.xsd
 #
 # https://stackoverflow.com/questions/17002324/xmllint-validate-an-xml-file-against-two-xsd-schemas-envelope-payload
 # https://www.biglist.com/lists/lists.mulberrytech.com/jats-list/archives/201310/msg00018.html
 # Crossref says it is necessary to download everything locally for xmllint.
+# Not easy to make work.
 validate v: $(xml_output)
 	xmllint --noout --schema $(xsd) $<
 
