@@ -478,7 +478,8 @@ access</a>.
   {221-226}
   {https://tug.org/members/TUGboat/!TBIDENT!verna-tfm.pdf}
   {}
-  {}
+  {Errata: section and program references to TFtoPL and PLtoTF have been
+   corrected from the printed version.}
 
 %%%%\capsule{}
 %%%%  {\LaTeX}%add|Software \& Tools
